# dr.pogodin-react-native-static-server

./: CHANGELOG.md  CMakeLists.txt  LICENSE.md  OLD-README.md  README.md  ReactNativeStaticServer.podspec  package.json  react-native.config.js  tsconfig.json
android/: build.gradle  gradle.properties  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/com/drpogodin/reactnativestaticserver/: Errors.kt  InetAddressUtils.kt  ReactNativeStaticServerModule.kt  ReactNativeStaticServerPackage.kt
android/src/main/java/com/lighttpd/: Server.kt
glob/: CMakeLists.txt  README.md  collate.h  glob.h
ios/: Errors.h  Errors.mm  ReactNativeStaticServer.h  ReactNativeStaticServer.mm  Server.h  Server.mm
lib/module/: NativeReactNativeStaticServer.js  NativeReactNativeStaticServer.ts  config.js  config.js.map  constants.js  constants.js.map  index.js  index.js.map  utils.js  utils.js.map
lib/typescript/: NativeReactNativeStaticServer.d.ts  config.d.ts  constants.d.ts  index.d.ts  utils.d.ts
lib/typescript/src/: NativeReactNativeStaticServer.d.ts  NativeReactNativeStaticServer.d.ts.map  config.d.ts  config.d.ts.map  constants.d.ts  constants.d.ts.map  index.d.ts  index.d.ts.map  utils.d.ts  utils.d.ts.map
lighttpd1.4/: README
lighttpd1.4/src/: CMakeLists.txt  config.h.cmake  fdevent.c  library-wrap.h  plugin.c  server.c  server_win32.c
src/: config.ts  constants.ts  index.tsx  utils.ts
windows/: ReactNativeStaticServer.sln  mingw.sh
windows/ReactNativeStaticServer/: Errors.cpp  Errors.h  ReactNativeModule.cpp  ReactNativeModule.h  ReactNativeStaticServer.vcxproj  ReactNativeStaticServer.vcxproj.filters  ReactPackageProvider.cpp  ReactPackageProvider.h  ReactPackageProvider.idl  Server.cpp  Server.h  pch.h
windows/ReactNativeStaticServer/codegen/: NativeReactNativeStaticServerSpec.g.h
